Add container user configuration and concurrency settings to CI workflow

--- a/src/large/.devcontainer/devcontainer.json
+++ b/src/large/.devcontainer/devcontainer.json
@@ -16,6 +16,7 @@
     "containerEnv": {
       "EDITOR": "nano --wait"
     },
+    "containerUser": "vscode",
     "customizations": {
       "jetbrains": {
         "ide": "IntelliJ IDEA Ultimate",
