--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -63,4 +63,4 @@ jobs:
           imageName: ghcr.io/${{ github.repository_owner }}/${{ matrix.image_name }}
           push: always
           platform: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
+          imageTag: ${{ steps.meta.outputs.tags }}
