--- a/src/large/.devcontainer/devcontainer.json
+++ b/src/large/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Gitpod",
+    "name": "Large Dev Container",
     "image": "mcr.microsoft.com/devcontainers/base:ubuntu-24.04",
     "features": {
       "ghcr.io/devcontainers/features/git:1": {},
@@ -16,6 +16,7 @@
     "containerEnv": {
       "EDITOR": "nano --wait"
     },
+    "containerUser": "vscode",
     "customizations": {
       "jetbrains": {
         "ide": "IntelliJ IDEA Ultimate",
@@ -36,4 +37,3 @@
       }
     }
   }
-  
