--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -48,6 +48,10 @@ jobs:
             type=ref,event=pr
             type=raw,value=latest,enable={{is_default_branch}}
 
+      - name: Transform tags to comma-separated list
+        id: transform-tags
+        run: echo "tags=$(echo ${{ steps.meta.outputs.tags }} | tr '\n' ',')" >> $GITHUB_ENV
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -62,4 +66,4 @@ jobs:
           imageName: ghcr.io/${{ github.repository_owner }}/${{ matrix.image_name }}
           push: always
           platform: linux/amd64,linux/arm64
-          imageTag: ${{ steps.meta.outputs.tags }}
+          imageTag: ${{ env.tags }}
